--- a/app/src/main/res/layout/frag_profile.xml
+++ b/app/src/main/res/layout/frag_profile.xml
@@ -129,7 +129,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="최근 3개월"
+                        android:text="최근 12주"
                         android:layout_marginLeft="4dp"/>
                 </LinearLayout>
 
