--- a/app/src/main/res/layout/frag_profile.xml
+++ b/app/src/main/res/layout/frag_profile.xml
@@ -38,7 +38,7 @@
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="32dp"
                         android:src="@drawable/img_user"
-                        android:scaleType="fitCenter"/>
+                        android:scaleType="fitXY" />
 
                     <TextView
                         android:id="@+id/profile_name"
