액션바 설정

--- a/app/src/main/res/layout/frag_course.xml
+++ b/app/src/main/res/layout/frag_course.xml
@@ -9,6 +9,16 @@
     android:orientation="vertical"
     tools:context=".fragment.FragCourse">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:text="COURSE"
+        android:textColor="@android:color/white"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
