--- a/app/src/main/res/layout/frag_profile.xml
+++ b/app/src/main/res/layout/frag_profile.xml
@@ -7,6 +7,17 @@
     android:orientation="vertical"
     android:background="#f0f0f0">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:text="PROFILE"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:textColor="@android:color/white"
+        android:gravity="center"
+        android:layout_marginBottom="1dp"
+        android:background="@color/colorPrimary"/>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
