--- a/app/src/main/res/layout/item_profile.xml
+++ b/app/src/main/res/layout/item_profile.xml
@@ -4,12 +4,13 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:layout_marginHorizontal="20dp">
 
     <ImageView
         android:id="@+id/img_badge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
         android:src="@drawable/ic_badge" />
 
     <TextView
