--- a/app/src/main/res/layout/frag_course.xml
+++ b/app/src/main/res/layout/frag_course.xml
@@ -66,7 +66,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/popularCourse_recyclerView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="280dp"
                     android:paddingHorizontal="16dp"
                     android:paddingVertical="8dp"
                     android:overScrollMode="never"/>
