--- a/app/src/main/res/layout/frag_profile.xml
+++ b/app/src/main/res/layout/frag_profile.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="#f0f0f0">
 
@@ -42,14 +42,24 @@
                     android:layout_marginBottom="0dp"
                     android:orientation="vertical">
 
-                    <ImageView
-                        android:id="@+id/profile_img"
-                        android:layout_width="125dp"
-                        android:layout_height="125dp"
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/img_cardview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="32dp"
-                        android:src="@drawable/img_user"
-                        android:scaleType="fitXY" />
+                        android:layout_marginTop="30dp"
+                        android:shape="ring"
+                        app:cardCornerRadius="65dp"
+                        app:cardElevation="10dp">
+
+                        <ImageView
+                            android:id="@+id/profile_img"
+                            android:layout_width="130dp"
+                            android:layout_height="130dp"
+                            android:layout_gravity="center_horizontal"
+                            android:src="@drawable/img_user"
+                            android:scaleType="fitXY"/>
+                    </androidx.cardview.widget.CardView>
 
                     <TextView
                         android:id="@+id/profile_name"
