--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0000-00-00"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         android:textSize="12sp"
         android:layout_alignParentRight="true"
         android:layout_marginRight="20dp"
@@ -43,6 +43,19 @@
             android:textStyle="bold"/>
 
         <TextView
+            android:id="@+id/search_course_point"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/search_course_name"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="20dp"
+            android:text="StartPoint"
+            android:textColor="@android:color/white"
+            android:textSize="14sp" />
+
+        <!--<TextView
             android:id="@+id/search_course_start_point"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -77,7 +90,7 @@
             android:textSize="14sp"
             android:textColor="@android:color/white"
             android:maxLines="1"
-            android:inputType="text"/>
+            android:inputType="text"/>-->
 
         <TextView
             android:id="@+id/search_course_distance"
@@ -85,7 +98,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="2dp"
-            android:layout_below="@+id/search_course_start_point"
+            android:layout_below="@+id/search_course_point"
             android:text="000.00 km"
             android:textSize="14sp"
             android:textColor="@android:color/white"/>
@@ -94,7 +107,7 @@
             android:id="@+id/stick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/search_course_point_wave"
+            android:layout_below="@+id/search_course_point"
             android:layout_toRightOf="@+id/search_course_distance"
             android:layout_marginStart="5dp"
             android:layout_marginTop="2dp"
@@ -108,7 +121,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginTop="2dp"
-            android:layout_below="@+id/search_course_start_point"
+            android:layout_below="@+id/search_course_point"
             android:layout_toRightOf="@+id/stick"
             android:text="00시간 00분"
             android:textSize="14sp"
@@ -135,14 +148,13 @@
             android:layout_alignParentRight="true"
             android:gravity="center_vertical">
 
-            <ToggleButton
+            <ImageButton
                 android:id="@+id/search_course_like_img"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:background="@drawable/like_button_selector"
-                android:layout_marginTop="2dp"
-                android:textOn=""
-                android:textOff="" />
+                android:background="@drawable/ic_like_checked"
+                android:layout_marginTop="2dp" />
+
             <TextView
                 android:id="@+id/search_course_like"
                 android:layout_width="wrap_content"
