loading image 추가

--- a/app/src/main/res/layout/activity_course_view_detail.xml
+++ b/app/src/main/res/layout/activity_course_view_detail.xml
@@ -21,9 +21,9 @@
     <TextView
         android:id="@+id/course_name_course_detail"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
         android:layout_marginTop="4dp"
-        android:text="Course Name"
+        android:text=""
         android:textColor="@android:color/black"
         android:textSize="24dp"
         app:layout_constraintStart_toStartOf="@+id/created_date_course_detail"
@@ -32,50 +32,15 @@
     <TextView
         android:id="@+id/point_course_detail"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="16dp"
-        android:text="Start Point"
+        android:text=""
         android:textColor="@android:color/black"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/course_name_course_detail"
         app:layout_constraintTop_toBottomOf="@+id/course_name_course_detail" />
-
-    <!--<TextView
-        android:id="@+id/start_point_course_detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:text="Start Point"
-        android:textColor="@android:color/black"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@+id/course_name_course_detail"
-        app:layout_constraintTop_toBottomOf="@+id/course_name_course_detail" />
-
-    <TextView
-        android:id="@+id/wave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="2dp"
-        android:text="~"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/start_point_course_detail"
-        app:layout_constraintTop_toBottomOf="@+id/course_name_course_detail" />
-
-    <TextView
-        android:id="@+id/end_point_course_detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="2dp"
-        android:text="End Point"
-        android:textColor="@android:color/black"
-        android:textSize="14sp"
-        app:layout_constraintStart_toEndOf="@+id/wave"
-        app:layout_constraintTop_toBottomOf="@+id/course_name_course_detail" />-->
 
     <TextView
         android:id="@+id/distance_title_course_detail"
@@ -95,7 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
         android:layout_marginTop="16dp"
-        android:text="00.0 km"
+        android:text="0 km"
         android:textColor="@android:color/black"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/distance_title_course_detail"
@@ -118,7 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="0시간 00분"
+        android:text="0분"
         android:textColor="@android:color/black"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/distance_course_detail"
@@ -161,7 +126,7 @@
             android:id="@+id/like_number_course_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="00,000"
+            android:text="0"
             android:textAlignment="center"
             android:layout_marginLeft="4dp"
             android:textSize="14dp"/>
