--- a/app/src/main/res/layout/activity_my_course_more.xml
+++ b/app/src/main/res/layout/activity_my_course_more.xml
@@ -7,6 +7,15 @@
     tools:context=".activity.MyCourseMoreActivity"
     android:background="@android:color/white">
 
+    <ImageView
+        android:id="@+id/my_course_more_loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/my_course_more_recyclerview"
         android:layout_width="match_parent"
