--- a/app/src/main/res/layout/frag_profile.xml
+++ b/app/src/main/res/layout/frag_profile.xml
@@ -18,6 +18,12 @@
         android:layout_marginBottom="1dp"
         android:background="@color/colorPrimary"/>
 
+    <ImageView
+        android:id="@+id/profile_loading_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
