--- a/app/src/main/res/layout/frag_profile.xml
+++ b/app/src/main/res/layout/frag_profile.xml
@@ -257,6 +257,14 @@
                     android:overScrollMode="never">
                 </androidx.recyclerview.widget.RecyclerView>
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/btn_logout"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="로그아웃"
+                android:textSize="15sp"
+                android:gravity="center"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
